[package]
name = "engine"
authors = ["do4gr"]
version = "0.1.0"
edition = "2018"

[lib]
name = "engine_lib"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1.15"
rustc-hash = "1.1.0"
csv = "1.1"
csv-async = {version = "1.1", features = ["tokio"]}
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "test_file"
harness = false


